kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/redirect-regex: 'https?://(?:www.)?(.*)'
    traefik.ingress.kubernetes.io/redirect-replacement: 'https://$1'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: $(DOMAIN)
      http:
        paths:
          - path: /
            backend:
              serviceName: nuxt-service
              servicePort: 80
  tls:
    - hosts:
        - $(DOMAIN)
      secretName: letsencrypt-prod-cert
